[project]
name = "stock-data-collector"
version = "1.0.0"
description = "使用掘金量化SDK获取股票数据并存储到MongoDB"
authors = [
    {name = "Stock Data Collector", email = "admin@example.com"}
]
dependencies = [
    "gm>=3.0.0",
    "pymongo>=4.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
