[project]
name = "stockdata"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "apscheduler>=3.11.0",
    "gm>=3.0.178",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "pymongo>=4.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "retrying>=1.4.2",
    "structlog>=25.4.0",
]
