[project]
name = "stockdata-v3"
version = "0.1.0"
description = "掘金量化SDK接口测试项目"
authors = [
    {name = "Administrator", email = "admin@example.com"}
]
dependencies = [
    "gm>=3.0.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pymongo>=4.0.0",
    "motor>=3.0.0",
    "apscheduler>=3.10.0",
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
